[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "blnk-py"
version = "0.3.0"
description = "Async Python SDK for the Blnk ledger API (typed, Pydantic v2)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["blnk_py"]
